@@ -281,6 +281,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP4700
        Canon PIXMA iP4800 (EXPERIMENTAL)
        Canon PIXMA iX6500 (EXPERIMENTAL)
+       Canon PIXMA iX7000 (EXPERIMENTAL)
        Canon PIXMA MG5100
        Canon PIXMA MG5200
        Canon PIXMA MG6100
